2020-02-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.3-alpha02: Fuji Rolls';git push
	git tag -a 4.9.3-alpha02 -m '';git push --tags

	* Update Zen of Regridding documentation on Confluence

2020-02-18  Charlie Zender  <zender@uci.edu>

	* Recompute and store new frac_a as well as frac_b when	re-normalizing weights

	* Change ncks --map_fix option (ambiguous with ncks --map) to --fix_map or --frac_b_fix

2020-02-17  Charlie Zender  <zender@uci.edu>

	* ncks nco_map_fix() add --map_fix option to fix self-overlaps

2020-02-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.3-alpha01: VD';git push
	git tag -a 4.9.3-alpha01 -m 'Functionally identical to 4.9.2';git push --tags

	* Change malingering gpl.html URLs to BSD3 URLs

	* NCO 4.9.2 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2: Delirium';git push
	git tag -a 4.9.2 -m 'Re-license from GPL3 to BSD;ncks chk_map, lz4.cdl;ncpdq -U -v lat fix;ncremap prs->hyb, crv axis/crd atts, fv2fv opt, ne1024pg2, NaN area, fl_fmt/hdr_pad, sml_crc;';git push --tags

	* Shrink homepage logo, fix banner

	* ncremap/ncclimo document HDF5_FILE_LOCKING

	* ncremap document --devnull

	* NCO 4.9.2-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-beta01: Recently and Nearby';git push
	git tag -a 4.9.2-beta01 -m 'Re-license from GPL3 to BSD;ncks chk_map, lz4.cdl;ncpdq -U -v lat fix;ncremap prs->hyb, crv axis/crd atts, fv2fv opt, ne1024pg2, NaN area, fl_fmt/hdr_pad, sml_crc;';git push --tags

	* Change license from GPL3 to BSD 3-clause

2020-02-13  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() add ERROR and HINT when prs->hyb lacks PS

	* NCO 4.9.2-alpha09 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha09: Absinthe';git push
	git tag -a 4.9.2-alpha09 -m 'ncremap unify [prs,hyb]->hyb, fix toowzh prs->prs bug; chk ovr area -> swap';git push --tags
