@@ -1,3 +1,7 @@
+2020-02-21  Charlie Zender  <zender@uci.edu>
+
+	* Update OpenMP update shared() clause in nco_ply_lst.c for thr_quota,thr_quota_step for Intel Compilers
+
 2020-02-20  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.9.3-alpha02 release procedure:
